# m2svg

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE.md  README.md  TEST_STATUS.md  regen_fixtures.sh  split_svg_tests.sh
examples/: test_svg.rs
src/: lib.rs  main.rs  types.rs
src/ascii/: canvas.rs  class_diagram.rs  draw.rs  er_diagram.rs  flowchart.rs  gitgraph.rs  grid.rs  mindmap.rs  mod.rs  pathfinder.rs  sequence.rs  types.rs
src/parser/: class.rs  er.rs  flowchart.rs  gitgraph.rs  mindmap.rs  mod.rs  sequence.rs
src/svg/: class_diagram.rs  er_diagram.rs  from_ascii.rs  gitgraph.rs  mindmap.rs  mod.rs  renderer.rs  sequence.rs  styles.rs  theme.rs  types.rs
testdata/ascii/: cls_inheritance_fanout.txt
testdata/positioned/: ampersand_lhs.json  ampersand_lhs_and_rhs.json  ampersand_rhs.json  ampersand_without_edge.json  back_reference_from_child.json  backlink_from_bottom.json  backlink_from_top.json  cls_all_relationships.json  cls_annotation.json  cls_association.json  cls_basic.json  cls_dependency.json  cls_inheritance.json  cls_methods.json  comments.json  duplicate_labels.json  er_attributes.json  er_basic.json  er_identifying.json  flowchart_tb_simple.json  graph_bt_direction.json  graph_tb_direction.json  nested_subgraphs_with_labels.json  preserve_order_of_definition.json  self_reference.json  self_reference_with_edge.json  seq_basic.json  seq_multiple_messages.json  seq_self_message.json  single_node.json  single_node_longer_name.json  subgraph_complex_mixed.json  subgraph_complex_nested.json  (+24 more)
tests/: integration_tests.rs
(+337 files in other folders)
