[package]
name = "m2svg"
version = "0.1.0"
edition = "2021"
authors = ["m2svg"]
description = "Convert Mermaid diagrams to ASCII art and SVG"
license = "MIT"

[dependencies]
regex = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
paste = "1.0.15"
roxmltree = "0.20"

[[bin]]
name = "m2svg"
path = "src/main.rs"

[lib]
name = "m2svg"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
